--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,12 @@ nav {
     z-index: 11;
 }
 
+/* change navbar styles on scroll using js */
+.window-scroll {
+    background: var(--color-primary);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+
 .nav__container {
     height: 100%;
     display: flex;
@@ -122,7 +128,7 @@ nav {
 }
 
 nav button {
-    display: none;
+    display: none; 
 }
 
 .nav__menu {
@@ -232,4 +238,37 @@ header {
 
 .category p {
     font-size: 0.85rem;
+}
+
+/* =============POPULAR COURSES================= */
+.courses {
+    margin-top: 10rem;
+}
+
+.courses__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.course {
+    background: var(--color-bg1);
+    text-align: center;
+    border: 1px solid transparent;
+    transition: var(--transition);
+}
+
+.course:hover {
+    background: transparent;
+    border-color: var(--color-primary);
+}
+
+
+.course__info {
+    padding: 2rem;
+}
+
+.course__info p {
+    margin: 1.2rem 0 2rem;
+    font-size: 0.9rem;
 }
