--- a/css/style.css
+++ b/css/style.css
@@ -272,3 +272,7 @@ header {
     margin: 1.2rem 0 2rem;
     font-size: 0.9rem;
 }
+.course:nth-child(2) .course__info  {
+    margin-top: 5rem;
+}
+
