--- a/css/style.css
+++ b/css/style.css
@@ -502,4 +502,125 @@ footer ul li a:hover {
         background: var(--color-bg2);
         color: var(--color-white);
     }
+
+        /* ==================HEADER===================== */
+    header {
+        height: 62vh;
+        margin-bottom: 4rem;
+    }
+
+    .header__container {
+        gap: 0;
+        padding-bottom: 3rem;
+    }
+
+        /* ==================CATEGPRIES===================== */
+    .categories {
+        height: auto;
+    }
+
+    .categories__container {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .categories__left {
+        margin-right: 0;
+    }
+
+        /* ==================POPULAR COURSES===================== */
+    .courses {
+        margin: auto;
+    }
+
+    .courses__container {
+       grid-template-columns: 1fr 1fr;
+    }
+
+
+        /* ==================FAQ===================== */
+    .faqs__container {
+        grid-template-columns: 1fr;
+    }
+
+    .faq {
+        padding: 1.5rem;
+    }
+
+
+        /* ==================FOOTER===================== */
+    .footer__container {
+        grid-template-columns: 1fr 1fr;
+
+    }
 }
+
+        /* ==================MEDIA QUERIES (PHONES)===================== */
+    @media 	screen and (max-width: 600px) {
+        .container {
+            width: var(--container-width-sm);;
+        }
+
+        /* ==================NAV BAR===================== */
+        .nav__menu {
+            right: 3%;
+        }
+
+         /* ==================FOOTER===================== */
+        header {
+            height: 100vh;
+            grid-template-columns: 1fr;
+            text-align: center;
+            margin-top: 0;
+        }
+
+
+        .header__left p {
+            margin-bottom: 1.3rem;
+        }
+
+         /* ==================CATEGORIES===================== */
+        .categories__container {
+            grid-template-columns: 1fr 1fr;
+            gap: 0.7rem;
+        }
+
+        .category {
+            padding: 1rem;
+            border-radius: 1rem;
+        }
+
+        .category__icon {
+            margin-top: 4px;
+            display: inline-block;
+        }
+
+        /* ==================POPULAR COURSES===================== */
+        .courses__container {
+            grid-template-columns: 1fr;
+        }
+
+        /* ==================TESTIMONIALS===================== */
+        .testimonial__body {
+            padding: 1.2rem;
+        }
+
+        /* ==================FOOTER===================== */
+        .footer__container {
+            grid-template-columns: 1fr;
+            text-align: center;
+            gap: 2rem;
+        }
+        
+        /* ==================FOOTER===================== */
+        .footer__1 p {
+            margin: 1rem auto;
+        }
+
+        .footer__socials {
+            justify-content: center;
+        }
+    }
+
+
+
